# swagger.json
@@ -3,56 +3,10 @@
     "info": {
         "title": "User Management API",
         "version": "1.0.0",
-        "description": "API for managing users in the system. It allows you to create and retrieve users."
+        "description": "API for managing users in the system. It allows you to create, retrieve, update, and delete users."
     },
     "paths": {
         "/users": {
-            "get": {
-                "summary": "Get all users",
-                "operationId": "getAllUsers",
-                "tags": [
-                    "users"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "A list of users",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "object",
-                                        "properties": {
-                                            "id": {
-                                                "type": "string",
-                                                "description": "The unique identifier of the user"
-                                            },
-                                            "name": {
-                                                "type": "string",
-                                                "description": "The name of the user"
-                                            },
-                                            "email": {
-                                                "type": "string",
-                                                "description": "The email address of the user"
-                                            },
-                                            "password": {
-                                                "type": "string",
-                                                "description": "The password of the user"
-                                            }
-                                        },
-                                        "required": [
-                                            "id",
-                                            "name",
-                                            "email",
-                                            "password"
-                                        ]
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            },
             "post": {
                 "summary": "Create a new user",
                 "operationId": "createUser",
@@ -131,6 +85,167 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "summary": "Get user by ID",
+                "operationId": "getUserById",
+                "tags": [
+                    "users"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "The unique identifier of the user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "id": {
+                                            "type": "string",
+                                            "description": "The unique identifier of the user"
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "description": "The name of the user"
+                                        },
+                                        "email": {
+                                            "type": "string",
+                                            "description": "The email address of the user"
+                                        }
+                                    },
+                                    "required": [
+                                        "id",
+                                        "name",
+                                        "email"
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            },
+            "put": {
+                "summary": "Update user by ID",
+                "operationId": "updateUserById",
+                "tags": [
+                    "users"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "The unique identifier of the user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "description": "The name of the user"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "description": "The email address of the user"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "description": "The password of the user"
+                                    }
+                                },
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "id": {
+                                            "type": "string",
+                                            "description": "The unique identifier of the user"
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "description": "The name of the user"
+                                        },
+                                        "email": {
+                                            "type": "string",
+                                            "description": "The email address of the user"
+                                        }
+                                    },
+                                    "required": [
+                                        "id",
+                                        "name",
+                                        "email"
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Delete user by ID",
+                "operationId": "deleteUserById",
+                "tags": [
+                    "users"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "The unique identifier of the user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User deleted successfully"
+                    },
+                    "404": {
+                        "description": "User not found"
                     }
                 }
             }
